Fix issue where alignment of thread row button depended on whether iconUrl had been in that stream before or not.

--- a/src/platform-implementation-js/dom-driver/gmail/style.css
+++ b/src/platform-implementation-js/dom-driver/gmail/style.css
@@ -180,12 +180,6 @@ div.T-I.inboxsdk__button {
   position: relative;
   height: 15px;
   width: 15px;
-  top: 2px;
-}
-
-.inboxsdk__thread_row_button img {
-  vertical-align: baseline;
-  margin: 0;
 }
 
 .inboxsdk__thread_row_custom_date {
